package com.codecool.bank;

public enum TransferStatus {
    PENDING,
    ACCEPTED,
    REJECTED
}
