package com.codecool.bank.account;

public enum AccountCurrency {
    LEI,
    EURO,
    US_DOLLAR
}
